<resources>
    <string name="app_name">OrderNow</string>
    <string name="preference_file">com.yue.ordernow.preference</string>

    <string name="action_confirm">Confirm</string>
    <string name="action_clear_orders">Clear</string>
    <string name="action_send_orders">Send</string>
    <string name="action_filter_list">Filter by pay status</string>
    <string name="action_search">Search</string>

    <string name="sample_quantity">999</string>
    <string name="sample_amount">$9999.99</string>
    <string name="sample_item_name">Item Name</string>
    <string name="sample_order_date">Oct.22, 2019 at 12:20</string>
    <string name="sample_order_id">9223372036854775807</string>
    <string name="sample_order_number">999</string>
    <string name="sample_percentage">100.0%</string>
    <string name="sample_orderer">ABCDEFGHIJZLMNO</string>
    <string name="no_order_text">No orderItem yet</string>
    <string name="title_order_id">Order ID</string>
    <string name="title_order_number">Order Number</string>
    <string name="title_order_number_symbol">#</string>
    <string name="title_placed_at">Placed at</string>
    <string name="title_order_detail">Order Detail</string>
    <string name="title_current_order">Current Order</string>
    <string name="title_confirm_sending_order">Send order as</string>
    <string name="title_unpaid_order">Pay later</string>
    <string name="title_paid_order">Paid</string>
    <string name="description_unpaid">This order is unpaid!!!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OrderNow</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_menu">Menu</string>
    <string name="title_recent_orders">Recent</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_order_bin">Bin</string>
    <string name="title_settings">Settings</string>

    <string name="title_custom_order">Customize %1$s</string>
    <string name="title_modify_order">Modify %1$s</string>
    <string name="hint_add_note">Note</string>
    <string name="hint_orderer">Add Customer Name or Table #</string>
    <string name="error_quantity_cannot_be_zero">Quantity cannot be 0</string>
    <string name="error_quantity_cannot_be_null">Quantity cannot be null</string>

    <string name="title_customize">Customize</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="place_order">Order</string>
    <string name="extra_cost">Extra cost</string>
    <string name="unit_price">Price</string>
    <string name="amount">Amount</string>
    <string name="title_quantity">Quantity</string>
    <string name="title_items">items</string>
    <string name="title_quantity_symbpl">\u00d7</string>
    <string name="title_quantity_short">Qty.</string>
    <string name="title_quantity_percentage">Qty.(%)</string>
    <string name="minimal_quantity">1</string>
    <string name="confirm">Confirm</string>

    <string name="title_total_amount">Total</string>
    <string name="title_tax">%1$s%%</string>
    <string name="tax">Tax</string>
    <string name="subtotal">Subtotal</string>
    <string name="order_type">Type</string>
    <string name="order_pay_status">Status</string>
    <string name="dining_in">Dining-in</string>
    <string name="take_out">Take-out</string>
    <string name="title_created_at">at</string>
    <string name="title_about_order">Order ID %1d</string>
    <string name="title_for">For</string>

    <string name="appetizer_title">Appetizer</string>
    <string name="breakfast_title">Breakfast</string>
    <string name="main_title">Main</string>
    <string name="drink_title">Drink</string>

    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="career_over">Career Over</string>

    <string name="orders">orders</string>
    <string name="display_text_placed_orders">were placed</string>
    <string name="display_text_made_revenue">were made</string>
    <string name="title_confirm_discard_order">Discard order?</string>
    <string name="title_more_actions_order">This order is</string>
    <string name="message_discard_order">Order will be discarded automatically when it\'s empty</string>
    <string name="message_order_sent">Order has been sent</string>
    <string name="text_order_item_removed">1 removed</string>
    <string name="title_mark_order_paid">Is order paid?</string>
    <string name="text_no_unpaid_orders">Congrats! All the orders are paid</string>
    <string name="text_no_order_history">Once you\'ve made orders, you\'ll see them listed here</string>
    <string name="text_no_orders">No orders</string>
    <string name="text_order_changed_to_paid">1 marked as paid</string>
    <string name="text_order_changed_to_unpaid">1 marked as unpaid</string>
    <string name="text_order_change_to_invalid">1 marked as no longer needed</string>
    <string name="undo">Undo</string>
    <string name="paid">Paid</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unpaid">Unpaid</string>
    <string name="title_validate_order">Validate order?</string>
    <string name="validate">Validate</string>
    <string name="text_order_validated">1 validated</string>

    <string name="pie_centre_text">%1$s orders</string>

    <string name="arg_report_type">report-type</string>
    <string name="arg_takeout_count">takeout-count</string>
    <string name="arg_dining_in_count">dining-in-count</string>
    <string name="arg_time_stamp">time-stamp</string>
    <string name="arg_report">report</string>

    <string name="key_tax_rate">tax_rate</string>
    <string name="title_tax_rate">Tax Rate</string>
    <string name="default_tax_rate">13</string>
    <string name="currency">Currency</string>
    <string name="key_currency">key_currency</string>
    <array name="currency_options">
        <item>Dollar ($)</item>
        <item>Euro (\u20ac)</item>
        <item>Pound (\u00a3)</item>
    </array>
    <string-array name="currency_option_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="send_order_pay_statuses">
        <item>Pay later</item>
        <item>Paid</item>
    </string-array>
    <string-array name="order_statuses">
        <item>Unpaid</item>
        <item>Paid</item>
        <item>No longer needed</item>
    </string-array>
</resources>
