<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_restaurant_menu"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/title_menu" />
        <item
            android:id="@+id/nav_recent_orders"
            android:icon="@drawable/ic_history"
            android:title="@string/title_recent_orders" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/title_dashboard" />
        <item
            android:id="@+id/nav_order_bin"
            android:icon="@drawable/ic_order_bin"
            android:title="@string/title_order_bin" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_settings" />
    </group>


</menu>
