<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="order"
            type="com.yue.ordernow.data.Order" />

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorBackground"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="@{onClickListener}"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/unpaid_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/description_unpaid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_monetization"
            app:tint="?attr/colorError" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{order.formattedTime}"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:firstBaselineToTopHeight="24dp"
            app:layout_constraintEnd_toStartOf="@+id/orderType"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/unpaid_icon"
            tools:text="@string/sample_order_date" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_order_number_symbol"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp"
            app:firstBaselineToTopHeight="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unpaid_icon" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/title_total_amount"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:firstBaselineToTopHeight="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@{String.valueOf(order.orderNumber)}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:firstBaselineToTopHeight="24dp"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            tools:text="@string/sample_order_number" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{order.formattedTotalAmount}"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:firstBaselineToTopHeight="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            tools:text="@string/sample_amount" />

        <TextView
            android:id="@+id/orderType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dining_in"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:firstBaselineToTopHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/orderer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{order.orderer}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            app:firstBaselineToTopHeight="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="@string/sample_orderer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>