<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp">


        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_confirm_sending_order"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textSize="20sp"
            app:firstBaselineToTopHeight="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checkedButton="@id/unpaid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <RadioButton
                android:id="@+id/unpaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_unpaid_order" />

            <RadioButton
                android:id="@+id/paid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_paid_order" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>